# tokentrack

./: Cargo.toml  README.en.md  README.md  package.json
.claude/: settings.local.json
.github/workflows/: build-native.yml  build-tauri.yml  release.yml  test_coverage.yml
apps/TokscaleMac/: .gitignore  Package.swift  build.sh  test_db.swift  test_db2.swift  test_db3.swift  test_db4.swift  test_db5.swift  test_db6.swift  test_db7.swift  test_db8.swift  test_scanner.swift  test_url.swift  test_url2.swift
apps/TokscaleMac/TokscaleMac/: TokscaleMacApp.swift
apps/TokscaleMac/TokscaleMac/Engine/: Scanner.swift  TokscaleEngine.swift
apps/TokscaleMac/TokscaleMac/Models/: ClientId.swift  TokenBreakdown.swift  UnifiedMessage.swift  UsageData.swift
apps/TokscaleMac/TokscaleMac/Resources/: AppIcon.icns
apps/TokscaleMac/TokscaleMac/Services/: AppSettings.swift  DataStore.swift  TokscaleService.swift
apps/TokscaleMac/TokscaleMac/Utilities/: Colors.swift  Formatting.swift  Themes.swift
apps/tauri-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/tauri-ui/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
crates/tokscale-cli/src/: main.rs
crates/tokscale-cli/tests/: cli_tests.rs
crates/tokscale-core/src/: clients.rs  lib.rs  scanner.rs
crates/tokscale-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
crates/tokscale-tauri/capabilities/: default.json
crates/tokscale-tauri/icons/: icon.icns
crates/tokscale-tauri/src/: commands.rs  main.rs  state.rs  tray.rs
scripts/macos/: release_signed_dmg.sh
(+47 files in other folders)
