[package]
name = "tokscale-tauri"
version = "2.3.1"
edition = "2021"
description = "TokenTrack macOS App"

[[bin]]
name = "tokscale-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokscale-core = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
